--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 		classpath 'edu.sc.seis.gradle:launch4j:2.4.2'
 		classpath "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.8'
 	}
 }
 
@@ -18,6 +19,7 @@ plugins {
 	id 'application'
 	id 'edu.sc.seis.macAppBundle' version '2.3.0'
     id "com.peterabeles.gversion" version "1.2.4"
+    id "com.google.protobuf" version "0.8.8"
 }
 
 apply plugin: 'com.palantir.docker'
@@ -236,3 +238,10 @@ gversion {
   className = "Version"
 }
 project.compileJava.dependsOn(createVersionFile)
+
+protobuf {
+    protoc {
+        // Download protoc compiler from repositories
+        artifact = 'com.google.protobuf:protoc:3.0.0'
+    }
+}
