--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.jvmargs=-Xms128m -Xmx512m
 org.gradle.configureondemand=true
 kotlinVersion=1.1.+
 gdxVersion=1.9.9
+protocVersion=3.7.1
+grpcVersion=1.21.0
