--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation group: 'io.grpc', name: 'grpc-protobuf', version: grpcVersion
     implementation group: 'io.grpc', name: 'grpc-stub', version: grpcVersion
     runtimeOnly group: 'io.grpc', name: 'grpc-netty-shaded', version: grpcVersion
+    implementation group: 'io.netty', name: 'netty-all', version: '4.1.36.Final'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
