--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,9 @@ dependencies {
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 	testCompile 'junit:junit:4.12'
 
+    compile 'org.glassfish:javax.annotation:10.0-b28'
+
+
 }
 
 compileKotlin {
