--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,11 @@ dependencies {
     implementation group: 'io.grpc', name: 'grpc-stub', version: grpcVersion
     runtimeOnly group: 'io.grpc', name: 'grpc-netty-shaded', version: grpcVersion
     implementation group: 'io.netty', name: 'netty-all', version: '4.1.36.Final'
+    implementation 'net.java.dev.jna:jna-platform:5.4.0'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
+	implementation files('libs/openkinect_processing.jar')
 
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 	testCompile 'junit:junit:4.12'
