--- a/shows/absinthe/tree-config.json
+++ b/shows/absinthe/tree-config.json
@@ -9,8 +9,8 @@
       "tilt": 0.0,
       "branches": [
         {
-          "locked": false,
-          "ipAddress": "10.200.1.226",
+          "locked": true,
+          "ipAddress": "10.255.255.255",
           "channel": 1,
           "x": -30.61,
           "y": 87.01,
