Layout initial rough twigs in branch for BanyanShow

--- a/shows/banyan/tree-config.json
+++ b/shows/banyan/tree-config.json
@@ -20,10 +20,10 @@
           "tilt": 0.0,
           "twigs": [
             {
-              "x": 0.0,
+              "x": -22.367998,
               "y": 0.0,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": 43.2,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 1,
@@ -32,10 +32,10 @@
               ]
             },
             {
-              "x": 0.0,
-              "y": 0.0,
+              "x": -19.487999,
+              "y": 12.575999,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": 30.599998,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 2,
@@ -44,10 +44,10 @@
               ]
             },
             {
-              "x": 0.0,
-              "y": 0.0,
+              "x": -12.479999,
+              "y": 26.208,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": 16.919998,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 3,
@@ -56,10 +56,10 @@
               ]
             },
             {
-              "x": 0.0,
-              "y": 0.0,
+              "x": -1.344,
+              "y": 31.008,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": 6.1199994,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 4,
@@ -68,10 +68,10 @@
               ]
             },
             {
-              "x": 0.0,
-              "y": 0.0,
+              "x": 8.063999,
+              "y": 31.104,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": -10.799999,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 5,
@@ -80,10 +80,10 @@
               ]
             },
             {
-              "x": 0.0,
-              "y": 0.0,
+              "x": 13.727999,
+              "y": 20.159998,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": -46.799995,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 6,
@@ -92,10 +92,10 @@
               ]
             },
             {
-              "x": 0.0,
-              "y": 0.0,
+              "x": 18.24,
+              "y": 8.9279995,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": -45.359997,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 7,
@@ -104,10 +104,10 @@
               ]
             },
             {
-              "x": 0.0,
+              "x": 21.792,
               "y": 0.0,
               "z": 0.0,
-              "azimuth": 0.0,
+              "azimuth": -47.159996,
               "elevation": 0.0,
               "tilt": 0.0,
               "index": 8,
