--- a/shows/banyan/sl-controller-mapping.json
+++ b/shows/banyan/sl-controller-mapping.json
@@ -1,4 +1,5 @@
 {
+  "pointsByModelID": {},
   "assignments": [
     {
       "modelId": "Branch0",
@@ -6,11 +7,19 @@
     },
     {
       "modelId": "Branch1",
-      "humanID": "A027"
+      "humanID": "B213"
     },
     {
       "modelId": "Branch2",
-      "humanID": "B221"
+      "humanID": "B214"
+    },
+    {
+      "modelId": "Branch3",
+      "humanID": "B216"
+    },
+    {
+      "modelId": "Branch4",
+      "humanID": "B217"
     }
   ],
   "showName": "banyan"
